@@ -1,3 +1,11 @@
+2000-04-19  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* mkoctfile.in: Remove output file before linking.
+
+	* octMakefile.in (DIRS_TO_MAKE): Create $(octincludedir)/octave.
+	(install install-strip): Install config.h in $(octincludedir)/octave,
+	not $(octincludedir).
+
 2000-03-31  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* octMakefile.in (DIRS_TO_MAKE): Double up on $ in awk command to
